JumpScript/tests/baselines/reference/project/jsFileCompilationDifferentNamesNotSpecifiedWithAllowJs/amd/jsFileCompilationDifferentNamesNotSpecifiedWithAllowJs.errors.txt
DifferentNamesNotSpecifiedWithAllowJs/jmpconfig.json(4,5): error TS5053: Option 'allowJs' cannot be specified with option 'declaration'.


==== DifferentNamesNotSpecifiedWithAllowJs/jmpconfig.json (1 errors) ====
    {
      "compilerOptions": {
        "out": "test.js",
        "allowJs": true
        ~~~~~~~~~
!!! error TS5053: Option 'allowJs' cannot be specified with option 'declaration'.
      }
    }
==== DifferentNamesNotSpecifiedWithAllowJs/a.jump (0 errors) ====
    var test = 10;
==== DifferentNamesNotSpecifiedWithAllowJs/b.js (0 errors) ====
    var test2 = 10; // Should get compiled